--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
     </div>
     <div id="home" class="intro">
         <h1>Welcome to Ketchup Talks!</h1>
-        <p>This series serves like a condiment to the mouthwatering snack that is research. Every week (or two weeks), doctoral students at IIIT-Delhi get together and deliberate on a host of topics dealing with research ranging from published work, works in progress, or even simply interesting ideas. </p>
-        <p>We are looking for speakers! If you are doctoral student at IIIT-D, and are interested in enlightening your fellow researchers, please use this <a href="https://forms.gle/Q78cVLdxwrqQKF9u9" target="_blank" rel="noopener noreferrer">google form</a> to nominate yourself as a speaker.</p>
+        <p>This talk series serves as a condiment to the mouthwatering snack, which is research. Every week (or two weeks), doctoral
+        students at IIIT-Delhi get together and deliberate on various topics dealing with research ranging from published work,
+        works in progress, or even simply interesting ideas.</p>
+        <p>We are looking for speakers! If you are a doctoral student at IIIT-D and are interested in enlightening your fellow
+        researchers, please use this <a href="https://forms.gle/Q78cVLdxwrqQKF9u9" target="_blank" rel="noopener noreferrer">google form</a> to nominate yourself as a speaker.</p>
     </div>
     <div id="talks" class="talks">
         <div class="talkhead"><h2>List of Talks</h2></div>
