--- a/index.html
+++ b/index.html
@@ -86,19 +86,60 @@
 
                 <tr>
                     <td>Nikita Merhotra</td>
-                    <td>TBA</td>
-                    <td>(Tentative)16/09/22</td>
-                    <td>---</td>
+                    <td>Leveraging Program Structure & Learning Based Techniques to Improve Type-4 Code Clone Detection Techniques</td>
+                    <td>16/09/22</td>
+                    <td><a href="https://drive.google.com/file/d/1LBpLwDQsxDo5vJ9HSC8SCY_LKnfPGhbN/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
                     <td>---</td>
                 </tr>
 
                 <tr>
-                    <td>Anupriya Tuli</td>
-                    <td>TBA</td>
-                    <td>(Tentative)23/09/22</td>
-                    <td>---</td>
+                    <td>Ashwini B</td>
+                    <td>Multi-Source Transfer Learning for Facial Emotion Recognition</td>
+                    <td>18/11/22</td>
+                    <td><a href="https://drive.google.com/file/d/1vzR2qGK0nGhS89TDrmxmyfTacjtwDAws/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
                     <td>---</td>
                 </tr>
+
+                <tr>
+                    <td>Raashid Altaf</td>
+                    <td>Trip Planning and Optimizations in Urban Public Transit Networks</td>
+                    <td>02/12/22</td>
+                    <td><a href="https://drive.google.com/file/d/1B8a2sJ-oBHqgomTrkty3K5Whly5XnWMJ/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td>---</td>
+                </tr>
+                        
+                <tr>
+                    <td>Sarah Masud</td>
+                    <td>Proactive and Reactive Flagging of Hateful Content</td>
+                    <td>27/01/23</td>
+                    <td><a href="https://drive.google.com/file/d/1BxOn1Iwff-Lw82rPmdusBXhVhXgJwo5t/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td>---</td>
+                </tr>
+
+                <tr>
+                    <td>Shyama Sastha K S</td>
+                    <td>What Is Causal Modeling, And Why Is Causality Necessary In Social Computing?</td>
+                    <td>10/02/23</td>
+                    <td><a href="https://drive.google.com/file/d/1s4rQNoG5AqpSfg54RFBM-dthAFVeWcEI/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td><a href="https://drive.google.com/file/d/1GpS7PVDalmTTQfb1yuHgsrJHzfpJRyMv/view?usp=sharing" target="_blank" rel="noopener noreferrer">Slides</a></td>
+                </tr>
+
+                <tr>
+                    <td>Monika Jain</td>
+                    <td>What Is Ontology And Why We Need It</td>
+                    <td>03/03/23</td>
+                    <td><a href="https://drive.google.com/file/d/13tOZ_U1syeAU2Eq2r_B0Abb4SbRj1niQ/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td>---</td>
+                </tr>
+
+                <tr>
+                    <td>Yaman Kumar Singla</td>
+                    <td>Content Consumer Interation</td>
+                    <td>17/03/23</td>
+                    <td><a href="https://drive.google.com/file/d/15Afui5McVkbiw-Hvq7bjqSGQMYiHYnM4/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td>---</td>
+                </tr>
+
                 </tbody>
             </table>
         </div>
