--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
                     <td>---</td>
                 </tr>
 
+                <tr>
+                    <td>Hitkul</td>
+                    <td>Modeling Online User Interactions and their Offline effects on Socio-Technical Platforms.</td>
+                    <td>26/05/23</td>
+                    <td><a href="https://drive.google.com/drive/folders/1FeiahwE1v4XezuUpIXltsekue1f715gW?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td>---</td>
+                </tr>
+
                 </tbody>
             </table>
         </div>
