--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <td>Hitkul</td>
                     <td>Modeling Online User Interactions and their Offline effects on Socio-Technical Platforms.</td>
                     <td>26/05/23</td>
-                    <td><a href="https://drive.google.com/drive/folders/1FeiahwE1v4XezuUpIXltsekue1f715gW?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td><a href="https://drive.google.com/file/d/1RFFapQmo5MAk7zMsmfYB030x5KApTwPL/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Poster</a></td>
                     <td>---</td>
                 </tr>
 
