--- a/index.html
+++ b/index.html
@@ -142,9 +142,17 @@
 
                 <tr>
                     <td>Hitkul</td>
-                    <td>Modeling Online User Interactions and their Offline effects on Socio-Technical Platforms.</td>
+                    <td>Modeling Online User Interactions and their Offline Effects on Socio-Technical Platforms</td>
                     <td>26/05/23</td>
-                    <td><a href="https://drive.google.com/file/d/1RFFapQmo5MAk7zMsmfYB030x5KApTwPL/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td><a href="https://drive.google.com/file/d/1RFFapQmo5MAk7zMsmfYB030x5KApTwPL/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
+                    <td>---</td>
+                </tr>
+
+                <tr>
+                    <td>Orchid Chetia Phukan</td>
+                    <td>Self-Supervised Speech Representation Pre-Training and its Behavior in Downstream Applications</td>
+                    <td>26/05/23</td>
+                    <td><a href="https://drive.google.com/file/d/1bt9kKXUhtHmkJB0H-QC4rDdMWpGoPBn3/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
                     <td>---</td>
                 </tr>
 
