--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <td>Proactive and Reactive Flagging of Hateful Content</td>
                     <td>27/01/23</td>
                     <td><a href="https://drive.google.com/file/d/1BxOn1Iwff-Lw82rPmdusBXhVhXgJwo5t/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
-                    <td>---</td>
+                    <td><a href="https://speakerdeck.com/_themessier/cse-ketchuptalk-sarah" target="_blank" rel="noopener noreferrer">Slides</a></td>
                 </tr>
 
                 <tr>
