--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <td>Self-Supervised Speech Representation Pre-Training and its Behavior in Downstream Applications</td>
                     <td>26/05/23</td>
                     <td><a href="https://drive.google.com/file/d/1bt9kKXUhtHmkJB0H-QC4rDdMWpGoPBn3/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
-                    <td>---</td>
+                    <td><a href="https://drive.google.com/file/d/1-1fWXefFHf_iP_u8SMK6xdvtVMrBQURg/view?usp=sharing" target="_blank" rel="noopener noreferrer">Slides</a></td>
                 </tr>
 
                 </tbody>
