--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <td>Multi-Source Transfer Learning for Facial Emotion Recognition</td>
                     <td>18/11/22</td>
                     <td><a href="https://drive.google.com/file/d/1vzR2qGK0nGhS89TDrmxmyfTacjtwDAws/view?usp=sharing" target="_blank" rel="noopener noreferrer">Poster</a></td>
-                    <td>---</td>
+                    <td><a href="https://drive.google.com/file/d/1PLfjhYtpLcZH9RyLZY1MGpC9IS9ydyR5/view?usp=sharing" rel="noopener noreferrer">Slides</a></td>
                 </tr>
 
                 <tr>
